--- a/components/PGE/testcases/case1/component.properties
+++ b/components/PGE/testcases/case1/component.properties
@@ -1,1 +1,1 @@
-component.cmdPrefix=docker run --rm=true -w ${metadata_componentPath} --volumes-from anduril-moksiskaan cfrech/anduril-pge /root/init.sh
+parameter.docker=biowaste:5000/anduril/pge
