--- a/components/GSEA/testcases/case1/component.properties
+++ b/components/GSEA/testcases/case1/component.properties
@@ -1,1 +1,2 @@
 parameter.label=test1
+parameter.gmt=/mnt/projects/generic/data/msigdb5.0/msigdb.v5.0.symbols.gmt,/mnt/projects/iamp/results/gsea/custom/mir_target_genesets.gmx
