--- a/components/ExpressionBoxPlot/testcases/case1/component.properties
+++ b/components/ExpressionBoxPlot/testcases/case1/component.properties
@@ -2,7 +2,7 @@ parameter.nCol=2
 parameter.nRow=2
 parameter.height=9
 parameter.caption=Panel of four
-parameter.groupOrder=CD19,ER,DS,iAMP
+parameter.includeGroups=CD19,ER,DS,iAMP
 parameter.hgnc=PCDHGB3,PCDHGA10,PCDHGA9,PCDHGC3
 parameter.labelOutliers=true
 parameter.cexDot=0.8
